--- a/lib/base/reset.scss
+++ b/lib/base/reset.scss
@@ -61,3 +61,7 @@ button:focus {
 input[type='number']::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
+
+textarea {
+  resize: none;
+}
