--- a/lib/core.scss
+++ b/lib/core.scss
@@ -1,3 +1,5 @@
+@import './variable/color.scss';
+@import './variable/screen.scss';
 @import './mixin/helper.scss';
 @import './mixin/classify.scss';
 @import './mixin/layout.scss';
