--- a/lib/object/text.scss
+++ b/lib/object/text.scss
@@ -1,24 +1,25 @@
-
 %text-base {
   white-space: pre-line;
   word-wrap: break-word;
+  text-decoration: none;
 }
 
 %base-text-ellipsis {
-    overflow: hidden;
-    text-overflow: ellipsis;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-@mixin text {
-    @extend %base-text;
+@mixin text($decoration: x) {
+  @extend %text-base;
+}
+
+@mixin text-link($decoration: x) {
+  @include text($decoration);
+  white-space: nowrap;
+  cursor: pointer;
 }
 
 @mixin text-ellipsis($width, $line-clamp: 1) {
-    @extend %base-text-ellipsis;
-    @include h-property(width, $width);
-}
-
-@mixin text-link {
-    @include text();
-    text-align: center;
+  @extend %base-text-ellipsis;
+  @include h-property(width, $width);
 }
